# radiant-cli

./: .gitignore  .radiant  README.md  bash  main.py  pyproject.toml
example_dataset/.dataset/: meta.toml
src/radiant/backend_api/api/dataset_controller/: create_dataset.py  create_image.py  get_all_datasets.py  get_dataset_by_id.py  get_images_by_dataset_id.py
src/radiant/backend_api/api/health_controller/: health.py
src/radiant/backend_api/api/image_controller/: get_image_by_id.py  (+1 more)
src/radiant/backend_api/models/: __init__.py  create_dataset_body.py  dataset_creation_dto.py  dataset_response_dto.py  health_response_200.py  image_creation_dto.py  image_filter.py
src/radiant/backend_client/models/: __init__.py  image_response_dto.py
src/radiant/bundle/: bundle_metadata_schema.py  bundle_metadata_service.py
src/radiant/cli/: bundle.py  bundle_tui.py  dataset.py  main.py  workspace.py
src/radiant/config/: config.py  schema.py
src/radiant/dataset/: dataset_metadata_schema.py  dataset_metadata_service.py
src/radiant/utils/files/: compression.py  files.py
src/radiant_cli/: main.py
src/radiant_cli/.radiant/: config.toml
src/radiant_cli/clients/: base_api_client.py  dataset_client.py  dataset_service.py  health_client.py  health_service.py
src/radiant_cli/clients/models/: dataset_models.py
src/radiant_cli/commands/: config.py  dataset.py  hello.py  init.py
src/radiant_cli/services/: health_service.py
src/radiant_cli/utils/: config_util.py  radiant_folder_util.py
src/radiant_cli/utils/dataset/: dataset_config_util.py  upload_utils.py
(+7 files in other folders)
