    [project]
    name = "radiant-ct"
    version = "0.1.2"
    description = "A CLI tool for medical imaging management"
    readme = "README.md"
    requires-python = ">=3.12"
    dependencies = [
        "openapi-python-client>=0.28.4",
        "pydantic>=2.13.4",
        "pyyaml>=6.0.3",
        "rich>=15.0.0",
        "typer>=0.25.1",
    ]

    [project.scripts]
    radiant = "radiant.cli.main:app"


    [dependency-groups]
    dev = [
        "pytest>=9.0.3",
        "ruff>=0.15.12",
    ]
